plugins {
    id("java")
    id("org.openjfx.javafxplugin") version "0.0.13"
    id("application")
}

group = "AP"
version = "1.0-SNAPSHOT"

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.openjfx:javafx-controls:21.0.2'
    implementation 'org.openjfx:javafx-fxml:21.0.2'

    testImplementation platform("org.junit:junit-bom:5.10.0")
    testImplementation "org.junit.jupiter:junit-jupiter"
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(23))
    }
}

javafx {
    version = "21.0.2"
    modules = ["javafx.controls", "javafx.fxml"]
}

application {
    mainClass.set("Main")
}

tasks.test {
    useJUnitPlatform()
}